fix font size of latex on mobile

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -552,4 +552,8 @@ proof, nonproof {
   .image_float_left img {
     width: 250px;
   }
+
+  .MathJax_CHTML {
+    font-size: 120% !important;
+  }
 }
